--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
+    "watch": "npm run build -- -w",
     "lint": "npm run scss:lint && npm run js:lint",
     "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
     "scss:lint": "stylelint '**/*.scss'",
-    "scss:lint:check": "stylelint-config-prettier-check",
-    "js:build": "rollup -c"
+    "scss:lint:check": "stylelint-config-prettier-check"
   },
   "keywords": [],
   "author": "",
