--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm-run-all --parallel watch serve",
     "build": "rollup -c",
-    "watch": "npm run build -- -w",
+    "watch": "rollup -c -w",
+    "serve": "serve public -n -s",
     "lint": "npm run scss:lint && npm run js:lint",
     "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
     "scss:lint": "stylelint '**/*.scss'",
@@ -19,10 +21,12 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^1.23.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^5.1.2",
+    "serve": "^11.2.0",
     "stylelint": "^11.1.1",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-scss": "^3.11.1"
