--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "web-tails",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web components",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist && rollup -c",
     "watch": "rollup -c rollup.config.app.js -w",
     "lint": "npm run scss:lint && npm run js:lint",
     "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^6.4.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
     "rollup": "^1.23.1",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^5.2.0",
