--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "web-tails",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Web components",
-  "main": "index.js",
+  "main": "lib/components.js",
   "scripts": {
-    "build": "rimraf dist && rollup -c",
+    "build": "rimraf lib && rollup -c",
     "watch": "rollup -c rollup.config.app.js -w",
     "lint": "npm run scss:lint && npm run js:lint",
     "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
     "scss:lint": "stylelint '**/*.scss'",
     "scss:lint:check": "stylelint-config-prettier-check"
   },
-  "keywords": [],
-  "author": "",
+  "author": "George Treviranus",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.8.3",
+    "@rollup/plugin-alias": "^3.0.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
@@ -22,8 +25,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "rollup": "^1.23.1",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
