--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web components",
   "main": "lib/components.js",
   "scripts": {
-    "build": "rimraf lib && rollup -c",
+    "build": "rm -rf lib && rollup -c",
     "watch": "rollup -c rollup.config.app.js -w",
     "lint": "npm run scss:lint && npm run js:lint",
     "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
@@ -14,24 +14,22 @@
   "author": "George Treviranus",
   "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.8.3",
-    "@rollup/plugin-alias": "^3.0.0",
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "node-sass": "^4.12.0",
+    "@babel/preset-env": "^7.8.6",
+    "@rollup/plugin-alias": "^3.0.1",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.23.1",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup": "^1.32.0",
     "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "^2.1.1",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "stylelint": "^11.1.1",
-    "stylelint-config-prettier": "^6.0.0",
-    "stylelint-scss": "^3.11.1"
+    "rollup-plugin-terser": "^5.2.0",
+    "stylelint": "^13.2.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-scss": "^3.14.2"
   }
 }
