--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "web-tails",
   "version": "0.1.0",
   "description": "Web components",
-  "main": "lib/components.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
+    "start": "rollup -c rollup.config.app.js -w",
     "build": "rm -rf lib && rollup -c",
-    "watch": "rollup -c rollup.config.app.js -w",
+    "build:prod": "rm -rf lib && BABEL_ENV='production' rollup -c",
     "lint": "npm run scss:lint && npm run js:lint",
-    "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore",
-    "scss:lint": "stylelint '**/*.scss'",
-    "scss:lint:check": "stylelint-config-prettier-check"
+    "js:lint": "eslint . --ext .js -c .eslintrc.js --ignore-path .eslintignore"
   },
   "author": "George Treviranus",
   "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.8.6",
     "@rollup/plugin-alias": "^3.0.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
@@ -22,7 +21,6 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5",
     "rollup": "^1.32.0",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-postcss": "^2.1.1",
